[package]
name = "bh_agent_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bh_agent_client"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
bh_agent_common = { path = "../bh_agent_common" }
tokio = "1.32.0"
anyhow = "1.0.75"
tarpc = { version = "0.33.0", features = ["full"] }
