[package]
name = "bh_agent_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bh_agent_common = { path = "../bh_agent_common" }
subprocess = "0.2.9"
tarpc = { version = "0.33.0", features = ["full"] }
tokio = { version = "1.32.0", features = ["full"] }
futures-util = "0.3.28"
futures = "0.3.28"
